# wdotool

./: .gitignore  Cargo.toml  Readme.md  hyprland.conf  pyproject.toml  wdotool_keymap
.github/workflows/: CI.yml
src/: lib.rs
src/wdotool_lib/: app_data.rs  helper.rs  mod.rs  screencopy.rs  shm.rs  virtual_keyboard.rs  virtual_pointer.rs
